# promem-vn

./: .gitignore  README.md  conftest.py  pyproject.toml
docs/: NEXT.md
experiments/: run_3arm.py  run_llm_3arm.py
promem/: __init__.py  envs.py  runner.py
promem/agent/: __init__.py  action_agent.py
promem/analysis/: __init__.py  inject_audit.py
promem/inject/: __init__.py  gate.py
promem/llm_agent/: __init__.py  bank.py  memory_agent.py  runner.py
promem/memory/: __init__.py  bank.py
results/: llm_3arm_haiku.json  llm_3arm_sonnet.json  panel_gpt56.json  panel_opus.json  q1_3arm_heuristic.json  q1_3arm_llm.json  q1_3arm_sonnet.json  q1_denoise_sonnet.json  q2_sweep_sonnet.json  smoke_llm.json  smoke_llm3.json
scripts/: plot_q2.py
tests/: test_bank.py  test_gate.py  test_inject_audit.py  test_llm_agent.py  test_runner_3arm.py
