[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "promem-vn"
version = "0.0.1"
description = "Proactive memory agent (ProMem) vs behavioral state decay — Phase 0 probe on automem Crafter"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
# Real Crafter runs reuse automem-vn's env; installed there. Tests need neither.
crafter = ["crafter"]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["promem*"]
